[gd_scene load_steps=15 format=2]

[ext_resource path="res://jenga_prototype/ui_elements/debug_menu/debug_group/DebugGroupTitle.gd" type="Script" id=1]
[ext_resource path="res://resources/themes/theme_debug_menu.tres" type="Theme" id=2]
[ext_resource path="res://scripts/custom_nodes/collpasible/Collapsible.gd" type="Script" id=3]
[ext_resource path="res://fonts/font_files/MavenPro-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/MavenProRegular_24.tres" type="DynamicFont" id=5]
[ext_resource path="res://jenga_prototype/ui_elements/debug_menu/debug_group/icons/icon_folder.svg" type="Texture" id=6]
[ext_resource path="res://jenga_prototype/ui_elements/debug_menu/debug_group/icons/icon_save.svg" type="Texture" id=7]
[ext_resource path="res://jenga_prototype/ui_elements/debug_menu/debug_group/DebugGroup.gd" type="Script" id=8]
[ext_resource path="res://scripts/custom_nodes/collpasible/icons/triangle_expanded.png" type="Texture" id=9]
[ext_resource path="res://scripts/custom_nodes/collpasible/icons/triangle_collapsed.png" type="Texture" id=10]
[ext_resource path="res://jenga_prototype/ui_elements/debug_menu/debug_group/icons/icon_reload.svg" type="Texture" id=11]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.4, 0.501961, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
resource_local_to_scene = true
size = 32
use_filter = true
font_data = ExtResource( 4 )

[node name="DebugGroup" type="VBoxContainer"]
margin_right = 455.0
margin_bottom = 99.0
custom_constants/separation = 10
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
title = ""
nodes_to_collapse = [ NodePath("DebugGroupTitle/Content/Buttons") ]

[node name="Node" type="Node" parent="."]

[node name="DebugGroupTitle" type="PanelContainer" parent="."]
margin_right = 455.0
margin_bottom = 99.0
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="VBoxContainer" parent="DebugGroupTitle"]
margin_left = 10.0
margin_top = 10.0
margin_right = 445.0
margin_bottom = 89.0
custom_constants/separation = 5

[node name="TitleButton" type="Button" parent="DebugGroupTitle/Content"]
margin_right = 435.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
toggle_mode = true
pressed = true
align = 0

[node name="Collapsible" type="Node" parent="DebugGroupTitle/Content/TitleButton"]
script = ExtResource( 3 )
collapsible_node_paths = [ NodePath("../../Buttons") ]
expanded_icon = ExtResource( 9 )
collapsed_icon = ExtResource( 10 )

[node name="Buttons" type="HBoxContainer" parent="DebugGroupTitle/Content"]
margin_top = 43.0
margin_right = 435.0
margin_bottom = 79.0
custom_constants/separation = 10
alignment = 2

[node name="Reset" type="Button" parent="DebugGroupTitle/Content/Buttons"]
margin_left = 307.0
margin_right = 343.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 0 )
custom_fonts/font = ExtResource( 5 )
icon = ExtResource( 11 )
expand_icon = true

[node name="Save" type="Button" parent="DebugGroupTitle/Content/Buttons"]
margin_left = 353.0
margin_right = 389.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 0 )
custom_fonts/font = ExtResource( 5 )
icon = ExtResource( 7 )
expand_icon = true

[node name="Open" type="Button" parent="DebugGroupTitle/Content/Buttons"]
margin_left = 399.0
margin_right = 435.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 0 )
custom_fonts/font = ExtResource( 5 )
icon = ExtResource( 6 )
expand_icon = true
[connection signal="collapsed_status_changed" from="DebugGroupTitle/Content/TitleButton/Collapsible" to="." method="_on_Collapsible_collapsed_status_changed"]
[connection signal="pressed" from="DebugGroupTitle/Content/Buttons/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="DebugGroupTitle/Content/Buttons/Open" to="." method="_on_Open_pressed"]
